--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [L,QSA]
 
-php_flag register_globals Off
+# We disable gzip, so we can output correct headers with php.
 SetEnv no-gzip 1
